--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           </button>
         </div>
         <div class="flex-1">
-          <a class="btn btn-ghost text-xl">daisyUI</a>
+          <a class="btn btn-ghost text-xl">Portofolio</a>
         </div>
         <div class="flex-none">
           <button class="btn btn-square btn-ghost">
