--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <!-- ini hero -->
     <section>
     <div class="hero min-h-screen"
-    style="background-image: url(https://images5.alphacoders.com/110/1103184.jpg);">
+    style="background-image: url(https://c4.wallpaperflare.com/wallpaper/987/161/271/baymax-big-hero-6-disney-movies-wallpaper-preview.jpg);">
     <div class="hero-overlay bg-opacity-60"></div>
     <div class="hero-content text-neutral-content text-center">
         <div class="max-w-md">
@@ -56,14 +56,14 @@
         <p class="mb-5">
             Perkenalkan aku Baymax, nada dering pendamping kesehatanmu.
         </p>
-        <button class="btn btn-primary">Ayo Mulai</button>
+        <!-- <button class="btn btn-primary">Ayo Mulai</button> -->
         </div>
     </div>
     </div>
     </section>
 
     <!-- ini about -->
-    <section class="bg-red-500 flex justify-center items-center gap-10 py-20">
+    <section class="rounded-b-[50px] bg-slate-300 flex justify-center items-center gap-10 py-20">
         <div class="">
             <h1 class=" text-2xl font-bold ">Tentang Saya</h1>
             <p>Perawatan lainnya adalah dukungan dan kasih sayang fisik</p>
@@ -73,6 +73,47 @@
               <img src="https://www.pngitem.com/pimgs/m/576-5767933_big-hero-5-baymax-hd-png-download.png" />
         </div>
     </section>
+
+    <!-- ini card -->
+     <section>
+      <div class="flex flex-wrap justify-center gap-4 py-5">
+        <div class="card bg-slate-200 w-96 shadow-xl">
+          <div class="card-body">
+            <h2 class="card-title font-bold">Hiro Hamada</h2>
+            <p>Hiro adalah anak cerdas dan kreatif, ahli robotika seperti Tadashi. </p>
+          </div>
+          <figure>
+            <img
+              src="https://c4.wallpaperflare.com/wallpaper/194/1019/716/cartoon-guy-city-of-heroes-hiro-hamada-hamada-to-watch-hd-wallpaper-preview.jpg"
+              alt="HiroHamada" />
+          </figure>
+        </div>
+      
+        <div class="card bg-slate-200 w-96 shadow-xl">
+          <div class="card-body">
+            <h2 class="card-title font-bold">Tadashi Hamada</h2>
+            <p>Tadashi adalah pencipta saya, seorang yang baik hati dan berbakat. </p>
+          </div>
+          <figure>
+            <img
+              src="https://64.media.tumblr.com/ea499425e1978658cad305953e6085fb/24b20bc3780976ba-0b/s1280x1920/41a9b47938185663f2ff33f51b0610f37bc3931c.jpg"
+              alt="TadashiHamada" />
+          </figure>
+        </div>
+      
+        <div class="card bg-slate-200 w-96 shadow-xl">
+          <div class="card-body">
+            <h2 class="card-title font-bold">Prof. Callaghan</h2>
+            <p>rofesor Callaghan, mentor Tadashi, berubah karena kehilangan putrinya.</p>
+          </div>
+          <figure>
+            <img
+              src="https://64.media.tumblr.com/7c614171a8c9754d1ccc6f0b5bd952cc/tumblr_inline_o757dokcZ11qlr65v_500.jpg"
+              alt="Callaghan" />
+          </figure>
+        </div>
+      </div>      
+     </section>
 
     <!-- ini footer -->
      <section>
